# Synapse

./: .env.example  .gitignore  README.md  check_services.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
agents/: adaptive_router.py  crag.py  graph_reasoner.py
agents/tools/: code_search.py  vector_search.py  web_search.py
app/: Dockerfile  celery.py  config.py  main.py  models.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: ReasoningTrace.tsx  chat-interface.tsx  message-item.tsx  providers.tsx  sidebar-nav.tsx  source-panel.tsx
pipeline/: chunker.py  citation_extractor.py  deduplicator.py  embedder.py  indexer.py  ingest.py  pagerank_job.py  preprocessor.py  relation_extractor.py
pipeline/extractors/: docx_extractor.py  html_extractor.py  image_extractor.py  pdf_extractor.py  text_extractor.py
prompts/: __init__.py  grading.py  templates.py
retrieval/: chroma_shard_manager.py  filters.py  graph_store.py  hybrid_retriever.py  reranker.py
routes/: health.py  ingest.py  pagerank.py  query.py  search.py
scratch/: debug_imports.py
security/: content_filter.py  input_guard.py  output_guard.py
services/: conversation.py  document_grader.py  query_decomposer.py  query_router.py  rag_pipeline.py  semantic_cache.py  shard_health.py
tests/: test_citation_extractor.py  test_graph_reasoner.py  test_graph_store.py  test_hybrid_retriever.py  test_main.py  test_pagerank.py  test_pipeline.py  test_relation_extractor.py  test_security.py  test_sharding.py
tools/: web_search.py
(+6 files in other folders)
